data/cloudformation_collected_templates_new/template_05578_VPCArch.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Architecture /16 VPC with 6 Private Subnets /20 and 3 Public Subnets /20
Resources:
  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: 10.16.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: HCMVPC
  IPv6CidrBlock:
    Type: "AWS::EC2::VPCCidrBlock"
    Properties:
      VpcId: !Ref VPC
      AmazonProvidedIpv6CidrBlock: true
  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        - Key: Name
          Value: HCM-IGW
  InternetGatewayAttachment:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  RTPub:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: HCM-vpc-rt-pub
  RTPubDefaultIPv4:
    Type: "AWS::EC2::Route"
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref RTPub
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  RTPubDefaultIPv6:
    Type: "AWS::EC2::Route"
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref RTPub
      DestinationIpv6CidrBlock: "::/0"
      GatewayId: !Ref InternetGateway
  RTAssociationPubA:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref SNPUBA
      RouteTableId: !Ref RTPub
  RTAssociationPubB:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref SNPUBB
      RouteTableId: !Ref RTPub
  RTAssociationPubC:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref SNPUBC
      RouteTableId: !Ref RTPub
  SNDBA:
    Type: "AWS::EC2::Subnet"
    DependsOn: IPv6CidrBlock
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select
        - 0
        - !GetAZs ""
      CidrBlock: 10.16.16.0/20
      AssignIpv6AddressOnCreation: true
      Ipv6CidrBlock: !Sub
        - "${VpcPart}${SubnetPart}"
        - SubnetPart: "01::/64"
          VpcPart: !Select
            - 0
            - !Split
              - "00::/56"
              - !Select
                - 0
                - !GetAtt
                  - VPC
                  - Ipv6CidrBlocks
      Tags:
        - Key: Name
          Value: sn-db-A
  SNDBB:
    Type: "AWS::EC2::Subnet"
    DependsOn: IPv6CidrBlock
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select
        - 1
        - !GetAZs ""
      CidrBlock: 10.16.80.0/20
      AssignIpv6AddressOnCreation: true
      Ipv6CidrBlock: !Sub
        - "${VpcPart}${SubnetPart}"
        - SubnetPart: "05::/64"
          VpcPart: !Select
            - 0
            - !Split
              - "00::/56"
              - !Select
                - 0
                - !GetAtt
                  - VPC
                  - Ipv6CidrBlocks
      Tags:
        - Key: Name
          Value: sn-db-B
  SNDBC:
    Type: "AWS::EC2::Subnet"
    DependsOn: IPv6CidrBlock
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select
        - 2
        - !GetAZs ""
      CidrBlock: 10.16.144.0/20
      AssignIpv6AddressOnCreation: true
      Ipv6CidrBlock: !Sub
        - "${VpcPart}${SubnetPart}"
        - SubnetPart: "09::/64"
          VpcPart: !Select
            - 0
            - !Split
              - "00::/56"
              - !Select
                - 0
                - !GetAtt
                  - VPC
                  - Ipv6CidrBlocks
      Tags:
        - Key: Name
          Value: sn-db-C
  SNAPPA:
    Type: "AWS::EC2::Subnet"
    DependsOn: IPv6CidrBlock
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select
        - 0
        - !GetAZs ""
      CidrBlock: 10.16.32.0/20
      AssignIpv6AddressOnCreation: true
      Ipv6CidrBlock: !Sub
        - "${VpcPart}${SubnetPart}"
        - SubnetPart: "02::/64"
          VpcPart: !Select
            - 0
            - !Split
              - "00::/56"
              - !Select
                - 0
                - !GetAtt
                  - VPC
                  - Ipv6CidrBlocks
      Tags:
        - Key: Name
          Value: sn-app-A
  SNAPPB:
    Type: "AWS::EC2::Subnet"
    DependsOn: IPv6CidrBlock
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select
        - 1
        - !GetAZs ""
      CidrBlock: 10.16.96.0/20
      AssignIpv6AddressOnCreation: true
      Ipv6CidrBlock: !Sub
        - "${VpcPart}${SubnetPart}"
        - SubnetPart: "06::/64"
          VpcPart: !Select
            - 0
            - !Split
              - "00::/56"
              - !Select
                - 0
                - !GetAtt
                  - VPC
                  - Ipv6CidrBlocks
      Tags:
        - Key: Name
          Value: sn-app-B
  SNAPPC:
    Type: "AWS::EC2::Subnet"
    DependsOn: IPv6CidrBlock
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select
        - 2
        - !GetAZs ""
      CidrBlock: 10.16.160.0/20
      AssignIpv6AddressOnCreation: true
      Ipv6CidrBlock: !Sub
        - "${VpcPart}${SubnetPart}"
        - SubnetPart: "0A::/64"
          VpcPart: !Select
            - 0
            - !Split
              - "00::/56"
              - !Select
                - 0
                - !GetAtt
                  - VPC
                  - Ipv6CidrBlocks
      Tags:
        - Key: Name
          Value: sn-app-C
  SNPUBA:
    Type: "AWS::EC2::Subnet"
    DependsOn: IPv6CidrBlock
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select
        - 0
        - !GetAZs ""
      CidrBlock: 10.16.48.0/20
      MapPublicIpOnLaunch: true
      Ipv6CidrBlock: !Sub
        - "${VpcPart}${SubnetPart}"
        - SubnetPart: "03::/64"
          VpcPart: !Select
            - 0
            - !Split
              - "00::/56"
              - !Select
                - 0
                - !GetAtt
                  - VPC
                  - Ipv6CidrBlocks
      Tags:
        - Key: Name
          Value: sn-pub-A
  SNPUBB:
    Type: "AWS::EC2::Subnet"
    DependsOn: IPv6CidrBlock
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select
        - 1
        - !GetAZs ""
      CidrBlock: 10.16.112.0/20
      MapPublicIpOnLaunch: true
      Ipv6CidrBlock: !Sub
        - "${VpcPart}${SubnetPart}"
        - SubnetPart: "07::/64"
          VpcPart: !Select
            - 0
            - !Split
              - "00::/56"
              - !Select
                - 0
                - !GetAtt
                  - VPC
                  - Ipv6CidrBlocks
      Tags:
        - Key: Name
          Value: sn-pub-B
  SNPUBC:
    Type: "AWS::EC2::Subnet"
    DependsOn: IPv6CidrBlock
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select
        - 2
        - !GetAZs ""
      CidrBlock: 10.16.176.0/20
      MapPublicIpOnLaunch: true
      Ipv6CidrBlock: !Sub
        - "${VpcPart}${SubnetPart}"
        - SubnetPart: "0B::/64"
          VpcPart: !Select
            - 0
            - !Split
              - "00::/56"
              - !Select
                - 0
                - !GetAtt
                  - VPC
                  - Ipv6CidrBlocks
      Tags:
        - Key: Name
          Value: sn-pub-C
  IPv6WorkaroundSubnetPUBA:
    Type: "Custom::SubnetModify"
    Properties:
      ServiceToken: !GetAtt
        - IPv6WorkaroundLambda
        - Arn
      SubnetId: !Ref SNPUBA
  IPv6WorkaroundSubnetPUBB:
    Type: "Custom::SubnetModify"
    Properties:
      ServiceToken: !GetAtt
        - IPv6WorkaroundLambda
        - Arn
      SubnetId: !Ref SNPUBB
  IPv6WorkaroundSubnetPUBC:
    Type: "Custom::SubnetModify"
    Properties:
      ServiceToken: !GetAtt
        - IPv6WorkaroundLambda
        - Arn
      SubnetId: !Ref SNPUBC
  IPv6WorkaroundRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - lambda.amazonaws.com
            Action:
              - "sts:AssumeRole"
      Path: /
      Policies:
        - PolicyName: !Sub "ipv6-fix-logs-${AWS::StackName}"
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - "logs:CreateLogGroup"
                  - "logs:CreateLogStream"
                  - "logs:PutLogEvents"
                Resource: "arn:aws:logs:*:*:*"
        - PolicyName: !Sub "ipv6-fix-modify-${AWS::StackName}"
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - "ec2:ModifySubnetAttribute"
                Resource: "*"
  IPv6WorkaroundLambda:
    Type: "AWS::Lambda::Function"
    Properties:
      Handler: index.lambda_handler
      Code:
        ZipFile: !Sub |
          import cfnresponse
          import boto3

          def lambda_handler(event, context):
              if event['RequestType'] is 'Delete':
                cfnresponse.send(event, context, cfnresponse.SUCCESS)
                return

              responseValue = event['ResourceProperties']['SubnetId']
              ec2 = boto3.client('ec2', region_name='${AWS::Region}')
              ec2.modify_subnet_attribute(AssignIpv6AddressOnCreation={
                                              'Value': True
                                            },
                                            SubnetId=responseValue)
              responseData = {}
              responseData['SubnetId'] = responseValue
              cfnresponse.send(event, context, cfnresponse.SUCCESS, responseData, "CustomResourcePhysicalID")
      Runtime: python3.9
      Role: !GetAtt
        - IPv6WorkaroundRole
        - Arn
      Timeout: 30
  SGWordpress:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Control access to Wordpress Instance(s)
      SecurityGroupIngress:
        - Description: Allow HTTP IPv4 IN
          IpProtocol: tcp
          FromPort: "80"
          ToPort: "80"
          CidrIp: 0.0.0.0/0
  SGDatabase:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Control access to Database
      SecurityGroupIngress:
        - Description: Allow MySQL IN
          IpProtocol: tcp
          FromPort: "3306"
          ToPort: "3306"
          SourceSecurityGroupId: !Ref SGWordpress
  SGLoadBalancer:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Control access to Load Balancer
      SecurityGroupIngress:
        - Description: Allow HTTP IPv4 IN
          IpProtocol: tcp
          FromPort: "80"
          ToPort: "80"
          CidrIp: 0.0.0.0/0
  SGEFS:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Control access to EFS
      SecurityGroupIngress:
        - Description: Allow NFS/EFS IPv4 IN
          IpProtocol: tcp
          FromPort: "2049"
          ToPort: "2049"
          SourceSecurityGroupId: !Ref SGWordpress
  CWAgentConfig:
    Type: "AWS::SSM::Parameter"
    Properties:
      Type: String
      Value: |
        {
          "agent": {
            "metrics_collection_interval": 60,
            "run_as_user": "root"
          },
          "logs": {
            "logs_collected": {
              "files": {
                "collect_list": [
                  {
                    "file_path": "/var/log/secure",
                    "log_group_name": "/var/log/secure",
                    "log_stream_name": "{instance_id}"
                  },
                  {
                    "file_path": "/var/log/httpd/access_log",
                    "log_group_name": "/var/log/httpd/access_log",
                    "log_stream_name": "{instance_id}"
                  },
                  {
                    "file_path": "/var/log/httpd/error_log",
                    "log_group_name": "/var/log/httpd/error_log",
                    "log_stream_name": "{instance_id}"
                  }
                ]
              }
            }
          },
          "metrics": {
            "append_dimensions": {
              "AutoScalingGroupName": "${aws:AutoScalingGroupName}",
              "ImageId": "${aws:ImageId}",
              "InstanceId": "${aws:InstanceId}",
              "InstanceType": "${aws:InstanceType}"
            },
            "metrics_collected": {
              "collectd": {
                "metrics_aggregation_interval": 60
              },
              "cpu": {
                "measurement": [
                  "cpu_usage_idle",
                  "cpu_usage_iowait",
                  "cpu_usage_user",
                  "cpu_usage_system"
                ],
                "metrics_collection_interval": 60,
                "resources": [
                  "*"
                ],
                "totalcpu": false
              },
              "disk": {
                "measurement": [
                  "used_percent",
                  "inodes_free"
                ],
                "metrics_collection_interval": 60,
                "resources": [
                  "*"
                ]
              },
              "diskio": {
                "measurement": [
                  "io_time",
                  "write_bytes",
                  "read_bytes",
                  "writes",
                  "reads"
                ],
                "metrics_collection_interval": 60,
                "resources": [
                  "*"
                ]
              },
              "mem": {
                "measurement": [
                  "mem_used_percent"
                ],
                "metrics_collection_interval": 60
              },
              "netstat": {
                "measurement": [
                  "tcp_established",
                  "tcp_time_wait"
                ],
                "metrics_collection_interval": 60
              },
              "statsd": {
                "metrics_aggregation_interval": 60,
                "metrics_collection_interval": 10,
                "service_address": ":8125"
              },
              "swap": {
                "measurement": [
                  "swap_used_percent"
                ],
                "metrics_collection_interval": 60
              }
            }
          }
        }
